--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/Assets/Logo.png" />
+    <link rel="apple-touch-icon" href="/src/Assets/Logo.png" />
     <meta data-rh="true" />
+    <meta name="description" content="Philip Nwabuwa's Github Repositries" />
+    <meta name="theme-color" content="#1b1b1b" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Repo</title>
   </head>
